# hermes

./: .Dockerfile  .gitignore  .gitpod.Dockerfile  .travis.yml  CMakeLists.txt  COPYING  CPPLINT.cfg  CTestConfig.cmake  Dockerfile  LICENSE  README.md  deps.Dockerfile  dev.Dockerfile  user.Dockerfile
adapter/: CMakeLists.txt  adapter_api.h  adapter_constants.h  adapter_init.cc  adapter_types.h  adapter_utils.cc  adapter_utils.h  constants.h  enumerations.h  interceptor.cc  interceptor.h  metadata_manager.h  real_api.h  singleton.h  utils.h
adapter/adapter_factory/: abstract_adapter.h  adapter_factory.h
adapter/adapter_generator/: README.md  mpiio.py  posix.py  stdio.py
adapter/filesystem/: CMakeLists.txt  file.h  filesystem.cc  filesystem.h  filesystem_io_client.h  filesystem_mdm.cc  filesystem_mdm.h  filesystem_mdm_singleton.cc  filesystem_mdm_singleton_macros.h  fs_metadata_manager.cc  fs_metadata_manager.h  fs_metadata_manager_singleton.cc  fs_metadata_manager_singleton_macros.h  metadata_manager.cc  metadata_manager.h  metadata_manager_singleton.cc  singleton.cc  singleton_macros.h
adapter/io_client/: CMakeLists.txt  empty.cc  io_client.h  io_client_factory.h
adapter/kvstore/: CMakeLists.txt  README.md  kvstore.cc  kvstore.h  settings.gradle  tests.py
adapter/mapper/: abstract_mapper.h  balanced_mapper.cc  balanced_mapper.h  mapper_factory.h
adapter/mpiio/: CMakeLists.txt  constants.h  datastructures.h  enumerations.h  fs_api.cc  fs_api.h  metadata_manager.cc  metadata_manager.h  mpiio.cc  mpiio.h  mpiio_api.cc  mpiio_api.h  mpiio_api_singleton.cc  mpiio_fs_api.h  mpiio_io_client.cc  mpiio_io_client.h  real_api.h
adapter/posix/: CMakeLists.txt  create_interceptor.py  datastructures.h  fs_api.cc  fs_api.h  metadata_manager.cc  metadata_manager.h  native.cc  native.h  posix.cc  posix.h  posix_api.cc  posix_api.h  posix_api_singleton.cc  posix_api_singleton_macros.h  posix_fs_api.h  posix_io_client.cc  posix_io_client.h  posix_singleton.cc  posix_singleton_macros.h  real_api.h  singleton.cc  singleton_macros.h
adapter/posix_save/: constants.h  create_interceptor.py  datastructures.h  posix.cc  posix.h
adapter/pubsub/: CMakeLists.txt  datastructures.h  metadata_manager.cc  metadata_manager.h  pubsub.cc  pubsub.h
adapter/stdio/: CMakeLists.txt  constants.h  datastructures.h  fs_api.cc  fs_api.h  metadata_manager.cc  metadata_manager.h  native.cc  native.h  real_api.h  stdio.cc  stdio.h  stdio_api.cc  stdio_api.h  stdio_api_singleton.cc  stdio_api_singleton_macros.h  stdio_fs_api.h  stdio_io_client.cc  stdio_io_client.h
adapter/test/: CMakeLists.txt  adapter_test_utils.h  adapter_utils.h  catch_config.h  gcc.sh  gcc_hermes.sh  gcc_hermes_full.sh  gcc_hermes_mode.sh  hermes_daemon.cc  mpi.sh  mpi_hermes.sh  preload.sh  preload_vfd.sh  run_hermes.sh
adapter/vfd/: CMakeLists.txt  H5FDhermes.c  H5FDhermes.cc  H5FDhermes.h  H5FDhermes_err.h  README.md
benchmark/: CMakeLists.txt  hermes_api_bench.cc  test_latency.cc  test_zmq.cc
benchmarks/: CMakeLists.txt  api_bench.cc  borg_bench.cc  dpe_bench.cc  mdm_bench.cc  memcpy_bench.cc  put_get_bench.cc  put_get_bench.py  reorganize.cc  vpic_bench.cc
benchmarks/HermesVFD/: CMakeLists.txt  README.md  config_generater.cc  hdf5-iotest_Hermes_VFD.csv  hdf5-iotest_Hermes_VFD.xlsx  hermes.conf_128KB  hermes.conf_1MB  hermes.conf_4KB_128KB_example  hermes.conf_4KB_1MB_example.conf  hermes.conf_sample
data_stager/: CMakeLists.txt  data_stager.h  data_stager_factory.h  filesystem.cc  filesystem.h  finalize_hermes.cc  stage_in.cc  stage_out.cc  stager.cc
data_stager/stagers/: posix_stager.cc  posix_stager.h  unix_stager.cc  unix_stager.h
data_stager/test/: CMakeLists.txt  stage_file.sh  tests.py  tests.sh
gotcha_intercept/: CMakeLists.txt  Readme  gotcha_mpi_io.cc  gotcha_mpi_io.h  gotcha_posix.cc  gotcha_posix.h  gotcha_stdio.cc  gotcha_stdio.h  mpi_io.txt  stdio.txt
hermes_adapters/: CMakeLists.txt  adapter_types.h  real_api.h
hermes_adapters/filesystem/: CMakeLists.txt  filesystem.cc  filesystem.h  filesystem_io_client.h  filesystem_mdm.cc  filesystem_mdm.h  filesystem_mdm_singleton.cc
hermes_adapters/mapper/: balanced_mapper.h  mapper_factory.h
hermes_adapters/mpiio/: CMakeLists.txt  mpiio_api.cc  mpiio_api.h  mpiio_fs_api.h  mpiio_io_client.cc  mpiio_io_client.h
hermes_adapters/posix/: CMakeLists.txt  posix_api.cc  posix_api.h  posix_fs_api.h  (+2 more)
hermes_shm/: .gitignore  CMakeLists.txt  readme.md
hrun/: CMakeLists.txt
io_client/: CMakeLists.txt
src/: CMakeLists.txt  binlog.h  buffer_organizer.cc  buffer_organizer.h  buffer_pool.cc  buffer_pool.h  buffer_pool_internal.h  communication.h  communication_factory.h  communication_factory.h.in  communication_mpi.cc  communication_mpi.h  config.h  config_client.cc  config_client.h  config_client_default.h  config_parser.cc  config_parser.h  config_server.cc  config_server.h  config_server_default.h  constants.cc  constants.h  data_placement_engine.cc  data_placement_engine.h  data_placement_engine_factory.h  data_structures.h  debug_state.cc  debug_state.h  decorator.h  hermes_config_manager.cc  hermes_daemon.cc  hermes_status.h  hermes_types.cc  hermes_types.h  hermes_version.h.in  hrun_client.cc  labstor_client.cc  labstor_runtime.cc  labstor_start_runtime.cc  (+41 more)
test/: CMakeLists.txt  argobots_test.cc  basic_test.h  bucket_test.cc  bucket_test.cpp  buffer_organizer_test.cc  buffer_pool_client_test.cc  buffer_pool_test.cc  buffering_loop_test.cc  catch_config.h  cluster_experiments.cc  common.h  config_parser_test.cc  dpe_optimization_test.cc  dpe_random_test.cc  dpe_roundrobin_test.cc  dpe_test.cc  end_to_end_test.cc  hostfile.txt  main.cc  main_mpi.cc  mdm_test.cc  memory_test.cc  metadata_test.cc  mpi.sh  mpi_test.c  prefetch_test.cc  preload_test.cc  stb_map_test.cc  stdio_test.c  swap_test.cc  test_binlog.cc  test_bucket.cc  test_buffer_pool.cc  test_config.cc  test_multinode_put_get.cc  test_partial_put_get.cc  test_put_get.cc  test_rpc.cc  test_tag.cc  (+8 more)
traits/: CMakeLists.txt
wrapper/: CMakeLists.txt  hermes_wrapper.cpp  hermes_wrapper.h
(+1193 files in other folders)
